--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.10.1
-  firebase_auth: ^5.4.1
+  firebase_core: ^2.15.0
+  cloud_firestore: ^4.8.0
+  firebase_auth: ^4.10.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
