modifications by SDN

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,8 @@ flutter:
   - assets/avatar7.png
   - assets/avatar8.png
   - assets/avatar9.png
+  - assets/Visa-Logo.png
+  - assets/Mastercard-logo.svg.png
 
   #   - images/a_dot_ham.jpeg
 
