--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,14 @@ dependencies:
   firebase_core: ^3.9.0
   cloud_firestore: ^5.6.3
   firebase_auth: ^5.3.4
-  http: ^0.13.6
- 
+  http: ^1.3.0
+  collection: ^1.19.0
+  share_plus: ^10.1.4
+  win32: ^5.5.3
+
+
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
